--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-symbols": "^0.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
